# Yue

./: .dockerignore  .gitignore  CHANGELOG.md  DESIGN_PROPOSAL_SMART_TITLING.md  Dockerfile  PROJECT_REQUIREMENTS.md  README.md  ROADMAP.md  TEST_REPORT.md  UI_DESIGN_GUIDELINES.md  check.sh  clean.sh  d.md  d2.md  deploy_docker.sh  dev.sh  fix_mtga.sh  git-main-guard.skill  install_deps.sh  opencode-setup.sh  pr_description.md  refactoring-safety-net.skill  sample.md  setup.sh  start.sh  stop.sh  verify_ollama_sync.py
backend/: .env.example  README.md  pyproject.toml  requirements.txt  us_japan_data.csv
backend/alembic/: env.py
backend/app/: main.py  observability.py
backend/data/: agents.json  chats.json.bak  global_config.json  global_config.json.example  mcp_configs.json  mcp_configs.json.example  notes.json  yue.db
backend/scripts/: backfill_session_tags.py  comprehensive_vector_test.py  deprecated_path_migration_skeleton.py  export_session_context_traffic_samples.py  import_legacy_skills_to_import_gate.py  migrate_agents_to_agent_kind_groups.py  migrate_agents_to_runtime_data.py  seed_chat_history_timezone_e2e.py  seed_trace_smoke_e2e.py  skill_effectiveness_daily_report.py  skill_runtime_boundary_harness.py  skills_env_diagnose.py  standard_alignment_cleanup_scan.py  test_vector_search.py
backend/tests/: TEST_REPORT_AZURE.md  _server.py  test_00_env_precheck.py  test_agent_regression.py  test_agent_store_persistence.py  test_agent_store_unit.py  test_agents_generate_api.py  test_api_skills.py  (+113 more)
rca-mcp-server/: .gitignore  LICENSE  README.md  pyproject.toml
(+625 files in other folders)
